<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillingDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/christian_mackie_cc0gg3begje_unsplash"
        android:backgroundTint="#80000000"
        android:backgroundTintMode="src_over"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"

            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/sharedscreenshot1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/how_the_bill_is_calculated"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/per_square_feet_we_charge_rs5"
                android:textSize="18sp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/if_a_house_has_more_than_three_rooms_we_charge_rs1000_for_each_room_without_adding_for_the_first_three_rooms"
                android:textSize="18sp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/if_a_house_has_more_than_two_bathrooms_we_charge_rs2000_for_each_bathroom_without_adding_for_the_first_two_bathrooms"
                android:textSize="18sp"
                style="@style/text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/ex_a_house_has_2500sqft_and_4_rooms_and_3_bathrooms"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/_1_house_square_feet_amount"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/_2500sqft_rs5_rs12500"
                android:textSize="18sp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/_2_bill_amount_of_room"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/_4_3_1_1000_rs1000"
                android:textSize="18sp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/_3_bill_amount_of_bathroom"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/_3_2_1_2000_rs2000"
                android:textSize="18sp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/final_bill_amount_is"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/_12500_1000_2000_rs15500"
                android:textSize="18sp"
                style="@style/text"/>


            </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>